[gd_scene load_steps=4 format=3 uid="uid://material_picker_ui"]

[ext_resource type="Script" path="res://src/ui/material_picker_ui.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.12, 0.16, 0.96)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.75, 0.3, 0.75, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SphereMesh" id="SphereMesh_preview"]
radius = 0.5
height = 1.0
radial_segments = 32
rings = 16

[node name="MaterialPickerUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="TitleRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 18
text = "ðŸŽ¨ Material Picker"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TitleRow"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "âœ•"
tooltip_text = "Close panel"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PreviewContainer" type="SubViewportContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="MarginContainer/VBoxContainer/PreviewContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 150)
render_target_update_mode = 4

[node name="PreviewCamera" type="Camera3D" parent="MarginContainer/VBoxContainer/PreviewContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0.8, 1.8)
projection = 1
size = 1.8

[node name="PreviewMesh" type="MeshInstance3D" parent="MarginContainer/VBoxContainer/PreviewContainer/SubViewport"]
mesh = SubResource("SphereMesh_preview")

[node name="PreviewLight" type="DirectionalLight3D" parent="MarginContainer/VBoxContainer/PreviewContainer/SubViewport"]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 2, 3, 2)

[node name="AmbientLight" type="DirectionalLight3D" parent="MarginContainer/VBoxContainer/PreviewContainer/SubViewport"]
transform = Transform3D(0.866025, 0.25, -0.433013, 0, 0.866025, 0.5, 0.5, -0.433013, 0.75, -2, 2, -2)
light_color = Color(0.6, 0.6, 0.7, 1)
light_energy = 0.3

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.78, 0.9, 1)
theme_override_font_sizes/font_size = 13
text = "Select a material"
horizontal_alignment = 1

[node name="MaterialList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)
